# coach-claude

./: .coverage  .gitignore  LICENSE  README.md  TASKLIST.md  client.py  config.json  coverage_report.txt  logging.json  package-lock.json  package.json  pyproject.toml  requirements.txt  system_architecture.md  test_output.txt  uv.requirements.txt
cline_docs/: TASKLIST.md  cache_system.md  codebaseSummary.md  currentTask.md  dynamic_prompts.md  knowledgeStructure.md  mpc_architecture.md  naming_conventions.md  plugin_development_guide.md  plugin_system_design.md  projectRoadmap.md  refrence_implementation.md  scratch_pad_server_tasklist.md  server_management.md  system_architecture.md  techStack.md  template_specification.md  usage_patterns.md
cline_docs/archive/: 2025_01_cache_management.md
cline_docs/userInstructions/: goal_creation.md  obsidian_setup.md
mcp-servers/mcp-scratchpad/: package-lock.json  package.json
mcp-servers/obsidian-server/: README.md  TASKLIST.md  package-lock.json  package.json
mcp_chat/: __init__.py  chat.py  conversation_manager.py  system_prompts.py
mcp_chat/cache/: __init__.py  cache_manager.py
mcp_chat/debug/: claude_monitor.py
mcp_chat/interface/: __init__.py  console.py
mcp_chat/nlp/: __init__.py  context_analyzer.py
mcp_chat/processing/: __init__.py  message_processor.py
mcp_chat/prompts/: __init__.py  prompt_manager.py  scratch_pad.py
mcp_chat/session/: __init__.py  (+1 more)
mcp_client/: __init__.py
nexus-frontend/: .eslintrc.json  README.md  TASKLIST.md  current_task.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
test-server/: package.json
test-vault/: another.md
test_directory/: test.txt
tests/: README.md  conftest.py  test_config_manager.py  test_message_processor.py  test_query_processor.py  test_server_manager.py
(+94 files in other folders)
