[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "mcp>=1.1.2",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[tool.setuptools]
packages = ["mcp_chat"]
