[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "mcp>=1.1.2",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[tool.setuptools]
packages = ["mcp_chat", "mcp_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mcp_client --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.11.1"
]
