[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.42.0",
    "mcp>=1.1.2",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "pydantic>=2.7.2",
    "fastapi>=0.110.0",
    "spacy>=3.7.0",
    "flashtext>=2.7",
    "uvicorn>=0.27.1",
    "websockets>=12.0",
    "requests>=2.31.0"
]

[tool.setuptools]
packages = ["mcp_chat", "mcp_client"]
